--- a/examples/test-folder/rollout.yaml
+++ b/examples/test-folder/rollout.yaml
@@ -6,10 +6,11 @@ metadata:
 spec:
   replicas: 5
   strategy:
-    canary:
-      canaryService: rollouts-demo-canary
+    bluegreen:
+      previewService: rollouts-demo-canary
+      autoPromotionEnabled: false
       # Reference to a Service which the controller will update to point to the stable ReplicaSet
-      stableService: rollouts-demo-stable
+      activeService: rollouts-demo-stable
       trafficRouting:
         kapcom:
           # Reference to an Ingress which has a rule pointing to the stable service (e.g. rollouts-demo-stable)
@@ -19,6 +20,27 @@ spec:
       steps:
       - setWeight: 20
       - pause: {}
+      - experiment:
+          duration: 5m
+          templates:
+          - name: baseline
+            specRef: stable
+          - name: canary
+            specRef: canary
+          analyses:
+          - name : mann-whitney
+            templateName: mann-whitney
+            args:
+            - name: stable-hash
+              valueFrom:
+                podTemplateHashValue: Stable
+            - name: canary-hash
+              valueFrom:
+                podTemplateHashValue: Latest
+            - name: start-time
+              value: 2021-03-31T13:50:25+0000
+            - name: end-time
+              value: 2021-03-31T13:50:25+0000 
       - setWeight: 40
       - pause: {duration: 10}
       - setWeight: 60
